  * Fixed memory leaks in audio sources.
  * Fixed thread's set (previously send) accidentally changing the type.
  * Fixed SoundData allocating the wrong number of samples.
  * Fixed SpriteBatch support on intel cards.
  * Fixed love.filesystem.lines() leaking.
  * Fixed Source controls inconsistencies.
  * Fixed most leaking on unclosed File objects.

  * Renamed SpriteBatch's lock/unlock to bind/unbind.

  * Updated love.joystick to be 1-indexed.
  * Updated love.thread to use get/set instead of send/receive.
  * Updated font engine.
  * Updated line drawing to a custom system.

  * Removed framebuffer auto-clearing.
  * Removed EncodedImageData.
  * Removed old syntax for require (with extension).

LOVE 0.7.2 [Game Slave]
-----------------------

  * Added Framebuffer:get/setWrap.
  * Added love.event.clear.
  * Added support for any number of arguments to love.keyboard.isDown, love.mouse.isDown and love.joystick.isDown.
  * Added SpriteBatch:setImage().
 
  * Fixed fused games not working.
  * Fixed ParticleSystem:setSize ignoring the variation argument.
  * Fixed some file-opening exceptions not being caught.
  * Fixed files loaded by libmodplug being too loud.
  * Fixed paths with periods in them not working.
  * Fixed love.graphics.getBlendMode not detecting subtractive and multiplicative blend modes.
  * Fixed crash when there was no memory available for newImageData(w, h).

  * Updated PhysicsFS version to 2.0.2 on Windows
  * Updated OpenAL Soft version to 1.13 on Windows
  * Updated libmodplug version to 0.8.8.1 on Windows
  * Updated FreeType version to 2.4.4 on Windows
  * Updated libmpg123 version to 1.13.2 on Windows
  * Windows binary no longer depends on VC2005 runtime.
  * Windows binary no longer depends on SSE2 support.

LOVE 0.7.1 [Game Slave]
-----------------------

  * Added source:isPaused()
  * Added error when initial window can't be created.
  * Added framebuffer filter modes.
  * Added love.filesystem.getLastModified.